# primer_project

./: .gitignore
ppdesign/: .gitignore  CHANGELOG.md  LICENSE  README.md  critical_targets.txt  pixi.toml  pyproject.toml
ppdesign/.github/workflows/: ci.yml
ppdesign/docs/: grna_pipeline.md  nucleotide_pipeline.md  overview.md  post_processing.md  primer_pipeline.md  results.md  test_datasets.md  unified_pipeline.md
ppdesign/examples/: run_example.sh
ppdesign/examples/primerdesign/: README.md  burkholderia_16s.fna
ppdesign/notebooks/.ipynb_checkpoints/: grna_visualization-checkpoint.ipynb
ppdesign/primer_design_pipeline/18S/Tubulinea/ppdesign_out/: amplicon_predictions.tsv  primer_pairs.csv  primer_pairs.fasta  summary.txt
ppdesign/resources/envs/: ppdesign.yml
ppdesign/resources/test_data/grna/: cluster45_subset.fna
ppdesign/resources/test_data/nucleotide/: toy_contigs.fna
ppdesign/resources/test_data/primer/: test_targets.fna
ppdesign/resources/test_data/unified/: toy_genomes.fna
ppdesign/src/ppdesign/: __init__.py  _version.py  cli.py  conserved_finder.py  genome_database.py  grna_alignment_viewer.py  guide_rna_finder.py  kmer_finder.py  output_utils.py  primer_candidates.py  primer_output.py  primer_pairing.py  primer_scoring.py  primer_types.py  primer_validation.py  probedesign_grna.py  probedesign_nucleotide.py  probedesign_primer.py  probedesign_rank.py  probedesign_seqselection.py  probedesign_unified.py  terminal_msa_detailed.py  terminal_msa_mismatch.py  terminal_msa_viewer.py  thermodynamics.py  validate_grna_alignments.py  validate_grna_cdna.py  validate_grna_thermo.py
ppdesign/test_fasta/: test_small.fna
ppdesign/tests/: conftest.py  test.fna  test_conserved_finder.py  test_grna_cli.py  test_guide_rna_finder.py  test_kmer_finder.py  test_nucleotide_pipeline.py  test_primer_candidates.py  test_primer_cli.py  test_primer_pair_finder.py  test_primer_pipeline_msa.py  test_unified_dependencies.py  verify_all_examples.sh
(+189 files in other folders)
